--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a class="nav-resume" href="/public/Resume_Dec.pdf" target="_blank">Resume</a></li>
+                <li><a class="nav-resume" href="./public/Resume_Dec.pdf" target="_blank">Resume</a></li>
             </ul>
             <button id="hamburgerBtn" class="hamburger">
                 <div></div>
@@ -705,7 +705,7 @@
                 <a href="#experience">Experience</a>
                 <a href="#skills">Skills</a>
                 <a href="#contact">Contact</a>
-                <a href="/public/Resume_Dec.pdf" target="_blank">Resume</a>
+                <a href="./public/Resume_Dec.pdf" target="_blank">Resume</a>
             </div>
         </div>
     </nav>
@@ -724,7 +724,7 @@
         <div class="hero-image">
             <div class="profile-container">
                 <div class="profile-image">
-                    <img src="/public/Headshot.jpg" alt="Eric Nguyen" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="./public/Headshot.jpg" alt="Eric Nguyen" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <span class="profile-placeholder" style="display: none;">👤</span>
                 </div>
             </div>
