Small text changes

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Eric Nguyen</h1>
-            <div class="subtitle">Full Stack Developer • AI/ML Engineer • DevOps Enthusiast</div>
+            <div class="subtitle">Full Stack Developer • AI Engineer • Infrastructure Enthusiast</div>
             <p>Passionate about building scalable applications and leveraging cutting-edge AI technologies to solve complex problems. Currently pursuing Computer Science at the University of Washington.</p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
