Small text changes

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Eric Nguyen. Crafted with creativity and caffine.</p>
+        <p>&copy; 2025 Eric Nguyen. Crafted with creativity and caffeine.</p>
     </footer>
 
     <script>
